syntax = "proto3";

option csharp_namespace = "calculate";

package calculate;

service Calculate {
  rpc CalculateAll (CalculateRequest) returns (stream CalculateResponse);
  rpc CombineName (stream CombineNameRequest) returns (CombineNameResponse);
}

message CalculateRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}
message CalculateResponse {
  string total = 1;
}

message CombineNameRequest{
  string name =1 ;
}
message CombineNameResponse{
  string combinedName = 1;
}

